Debugged DatePicker, implemented tournament status shanges and property changes

--- a/sv-tora/public/css/app.css
+++ b/sv-tora/public/css/app.css
@@ -3728,18 +3728,21 @@ input.time-input {
 }
 
 .datepicker {
-    width: 20em;
+    position: absolute;
+    width: 22rem;
     cursor: auto;
     font-size: 1em;
-    margin: 6em auto;
     box-shadow: 1px 2px 4px 1px var(--box-shadow), 1px 2px 4px 1px transparent;
     background-color: var(--theme-color-4);
+    top: 15%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .datepicker .date-header {
     text-align: center;
     background-color: var(--accent-color-1-light);
-    color: #fff;
+    color: var(--theme-color-1-dark);
     padding: 1em 0;
 }
 
@@ -3749,7 +3752,7 @@ input.time-input {
 
 .datepicker .date-header a {
     position: relative;
-    color: white;
+    color: var(--theme-color-1-dark);
     z-index: 1;
     cursor: pointer;
 }
@@ -3764,7 +3767,7 @@ input.time-input {
     position: absolute;
     opacity: 0;
     transition: 0.2s ease;
-    background-color: white;
+    background-color: var(--theme-color-1-dark);
     z-index: -1;
 }
 
@@ -3797,6 +3800,15 @@ input.time-input {
     font-size: 1.75em;
     left: 0.25em;
     top: 0.1em;
+}
+
+.datepicker .date-header .year {
+    font-weight: bold;
+}
+
+.datepicker .date-header .year:hover {
+    color: white;
+    cursor: pointer;
 }
 
 .datepicker .footer {
@@ -3861,6 +3873,7 @@ input.time-input {
     border-radius: 50%;
     transform: translate(-50%,-50%);
     background-color: rgba(0,0,0,0.25);
+    z-index: -1;
 }
 
 .calender tbody td.selectable {
@@ -3878,7 +3891,6 @@ input.time-input {
 .calender tbody .selected:after, .calender tbody td:active:after {
     visibility: visible;
     background-color: var(--accent-color-1-light);
-    z-index: -1;
 }
 
 /*
@@ -3975,12 +3987,15 @@ input.time-input {
 }
 
 .timepicker {
+    position: absolute;
     width: 20em;
     cursor: auto;
     font-size: 1em;
-    margin: 6em auto;
     box-shadow: 1px 2px 4px 1px var(--box-shadow), 1px 2px 4px 1px transparent;
     background-color: var(--theme-color-4);
+    top: 15%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .timepicker .time-header {
@@ -4907,18 +4922,15 @@ a.primary-button.close-modal i {
 
 .mw-content h2 {
     font-size: 1em;
+    margin-top: 0;
+}
+
+.mw-content h3 {
+    margin-top: 0;
 }
 
 .mw-content .input-container {
     margin-bottom: 1em;
-}
-
-.mw-content .select-input-container {
-    margin-bottom: 1em;
-}
-
-.mw-content :first-child {
-    margin-top: 0 !important;
 }
 
 .modal-window .mw-footer {
@@ -5224,6 +5236,7 @@ nav.nav .image-container img {
 
 .notification {
     position: fixed;
+    height: 4.5rem;
     width: 4.5rem;
     right: -6rem;
     bottom: 2rem;
@@ -5235,7 +5248,7 @@ nav.nav .image-container img {
 }
 
 .notification.visible {
-    transition: width 0.75s ease 0.5s, background-color 1.25s ease, right 0.5s ease 0s;
+    transition: height 0.5s ease 0s, width 0.75s ease 0.5s, background-color 1.25s ease, right 0.5s ease 0s;
     right: 2em;
 }
 
@@ -5248,9 +5261,9 @@ nav.nav .image-container img {
 
 .notification.visible:hover {
     width: calc(100% - 4rem);
-    height: auto;
+    height: 8rem;
     background: rgba(61, 118, 225, 0.9);
-    transition: width 0.75s ease 0s;
+    transition: height 0.5s ease 0.75s, width 0.75s ease 0s;
     -webkit-animation-play-state: paused;
             animation-play-state: paused;
 }
@@ -5357,13 +5370,12 @@ nav.nav .image-container img {
 
 .notification p {
     position: relative;
-    width: 100%;
-    height: auto;
-    float: right;
-    margin: 0.5em 0;
+    width: calc(100% - 2rem);
+    height: 100%;
+    margin: 0;
     font-size: 1em;
     padding-left: 4em;
-    padding-right: 2em;
+    padding-right: 1em;
     transition: 0.2s ease;
     transition-delay: 0s;
     line-height: 1.3;
