--- a/sv-tora/resources/css/components/modal.css
+++ b/sv-tora/resources/css/components/modal.css
@@ -159,18 +159,15 @@ a.primary-button.close-modal i {
 
 .mw-content h2 {
     font-size: 1em;
+    margin-top: 0;
+}
+
+.mw-content h3 {
+    margin-top: 0;
 }
 
 .mw-content .input-container {
     margin-bottom: 1em;
-}
-
-.mw-content .select-input-container {
-    margin-bottom: 1em;
-}
-
-.mw-content :first-child {
-    margin-top: 0 !important;
 }
 
 .modal-window .mw-footer {
