--- a/sv-tora/public/css/app.css
+++ b/sv-tora/public/css/app.css
@@ -868,9 +868,6 @@ a.go-back i {
 }
 
 @media only screen and (min-width: 1200px) {
-    html {
-        font-size: 1.3rem;
-    }
 
     main.limited {
         max-width: 1500px;
@@ -2857,7 +2854,7 @@ header .profile {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(45deg)  scale(1);
-  background-image: url(/images/loader.svg?82970fff54da6693fe08a857a542d4b4);
+  background-image: url("/images/loader.svg");
   background-size: 200px;
   background-repeat: no-repeat;
   background-color: rgba(232, 232, 232, 0.5);
@@ -5160,7 +5157,7 @@ nav.nav li span.bg {
     width: 100%;
     height: 100%;
     padding: 10rem;
-    background: url(/images/stain.png?28d2f8e187cb1c181746601c6e419589) no-repeat center/20rem;
+    background: url("/images/stain.png") no-repeat center/20rem;
     opacity: 0;
     z-index: -1;
 }
@@ -6556,7 +6553,7 @@ h2.table-heading {
   z-index: -1;
 }
 
-a.primary-button.print {
+.table-actions a.primary-button.print {
   float: right;
 }
 
