--- a/sv-tora/public/css/sites/tournament-category-administration.css
+++ b/sv-tora/public/css/sites/tournament-category-administration.css
@@ -50,6 +50,12 @@
     font-style: italic;
 }
 
+.primary-button.add-category {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 @media only screen and (min-width: 600px) {
 
 }
