--- a/sv-tora/resources/css/components/loader.css
+++ b/sv-tora/resources/css/components/loader.css
@@ -44,7 +44,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(45deg)  scale(1);
-  background-image: url("../../../public/images/loader.svg");
+  background-image: url("/images/loader.svg");
   background-size: 200px;
   background-repeat: no-repeat;
   background-color: rgba(232, 232, 232, 0.5);
