--- a/sv-tora/resources/css/components/nav.css
+++ b/sv-tora/resources/css/components/nav.css
@@ -143,7 +143,7 @@ nav.nav li span.bg {
     width: 100%;
     height: 100%;
     padding: 10rem;
-    background: url("../../../public/images/stain.png") no-repeat center/20rem;
+    background: url("/images/stain.png") no-repeat center/20rem;
     opacity: 0;
     z-index: -1;
 }
