--- a/sv-tora/resources/css/components/header.css
+++ b/sv-tora/resources/css/components/header.css
@@ -59,7 +59,8 @@ header:before {
     opacity: 0.95;
 }
 
-header div.logo {
+header a.logo {
+    display: block;
     position: relative;
     background-image: url("/images/Logo_light.png");
     background-size: contain;
@@ -69,7 +70,7 @@ header div.logo {
     transition: 0.5s ease;
 }
 
-header > a {
+header .header-button {
     display: block;
     position: absolute;
     border-radius: 10%;
@@ -86,8 +87,8 @@ header > a {
     color: white;
 }
 
-header > a:hover,
-header > a:focus {
+header .header-button:hover,
+header .header-button:focus {
     background-color: var(--accent-color-1-light);
 
 }
@@ -102,15 +103,15 @@ header .profile {
     transform: rotate(5deg);
 }
 
-.header > a i {
+.header .header-button i {
     font-size: 2rem;
     line-height: 3;
     color: var(--accent-color-1-dark);
     transition: 0.2s ease;
 }
 
-.header > a:hover i,
-.header > a:focus i {
+.header .header-button:hover i,
+.header .header-button:focus i {
     color: white;
 }
 
@@ -129,16 +130,16 @@ header .profile {
         padding-top: 0;
     }
 
-    header div.logo {
+    header a.logo {
         height: 40px;
     }
 
-    header:hover div.logo,
-    header.open-menu div.logo {
+    header:hover a.logo,
+    header.open-menu a.logo {
         height: 55px;
     }
 
-    header > a {
+    header .header-button {
         width: 6rem;
         height: 6rem;
         top: -2rem;
@@ -166,7 +167,7 @@ header .profile {
         transform: rotate(5deg);
     }
 
-    .header > a i {
+    .header .header-button i {
         line-height: 3.5;
     }
 }
