--- a/sv-tora/public/css/app.css
+++ b/sv-tora/public/css/app.css
@@ -586,6 +586,7 @@ main {
     padding: 7.5rem 1.5rem 7rem 3rem;
     position: relative;
     width: 100%;
+    max-width: 1920px;
     height: 100%;
     min-height: 100vh;
     transition: 0.2s ease;
