--- a/sv-tora/public/css/sites/fighter-tournament-configuration.css
+++ b/sv-tora/public/css/sites/fighter-tournament-configuration.css
@@ -72,6 +72,7 @@ main {
     display: grid;
     grid-template-columns: 50% 50%;
     margin-bottom: 1.5rem;
+    padding-bottom: 1rem;
     border-bottom: 2px dotted var(--theme-color-4);
 }
 
