--- a/sv-tora/public/css/sites/tournament-dashboard.css
+++ b/sv-tora/public/css/sites/tournament-dashboard.css
@@ -482,6 +482,7 @@ a.fighting-systems.prepared:hover .count-not-prepared {
     color: var(--accent-color-3-light);
 }
 
+
 /**************************************************************************
 
   Styles for the person enrollment container
@@ -511,6 +512,10 @@ a.fighting-systems.prepared:hover .count-not-prepared {
     border-color: var(--accent-color-1-light);
 }
 
+.persons-container:hover .disabled {
+    cursor: not-allowed;
+}
+
 .persons-container h3 {
     position: absolute;
     text-align: center;
@@ -524,7 +529,7 @@ a.fighting-systems.prepared:hover .count-not-prepared {
     transition: 0.5s ease;
 }
 
-.persons-container:hover h3 {
+.persons-container:hover :not(.disabled) h3 {
     color: var(--accent-color-1-light);
     font-size: 2.5em;
 }
@@ -543,7 +548,7 @@ a.fighting-systems.prepared:hover .count-not-prepared {
     transition: 0.5s ease;
 }
 
-.group:hover {
+.group:not(.disabled):hover {
     background-color: var(--theme-color-3);
 }
 
@@ -598,7 +603,7 @@ a.fighting-systems.prepared:hover .count-not-prepared {
     top: -7em;
 }
 
-.group:hover .circle {
+.group:not(.disabled):hover .circle {
     background-color: var(--accent-color-1-light);
     border: 2px solid var(--accent-color-1-light);
     box-shadow: 0 0 0 0 var(--accent-color-1-dark) inset, 0 0 45px 5px var(--accent-color-1-light);
@@ -634,7 +639,7 @@ a.fighting-systems.prepared:hover .count-not-prepared {
     bottom: 15%;
 }
 
-.group:hover .number {
+.group:not(.disabled):hover .number {
     color: var(--theme-color-1);
     font-weight: bold;
 }
@@ -652,7 +657,7 @@ a.fighting-systems.prepared:hover .count-not-prepared {
     font-weight: bold;
 }
 
-.group:hover .text {
+.group:not(.disabled):hover .text {
     color: var(--accent-color-1-light);
     transform: translate(-50%, -50%) scale(1.2);
 }
@@ -706,6 +711,10 @@ a.fighting-systems.prepared:hover .count-not-prepared {
     background-color: var(--theme-color-3);
 }
 
+.teams-container:hover .disabled {
+    cursor: not-allowed;
+}
+
 .teams-container h3 {
     position: absolute;
     text-align: center;
@@ -719,7 +728,7 @@ a.fighting-systems.prepared:hover .count-not-prepared {
     transition: 0.5s ease;
 }
 
-.teams-container:hover h3 {
+.teams-container:hover :not(.disabled) h3 {
     color: var(--accent-color-1-light);
     font-size: 2.5em;
 }
@@ -745,7 +754,7 @@ a.fighting-systems.prepared:hover .count-not-prepared {
     background-color: var(--theme-color-1);
 }
 
-.teams-container:hover .circle {
+.teams-container:hover :not(.disabled) .circle {
     background-color: var(--accent-color-1-light);
     border: 2px solid var(--accent-color-1-light);
     box-shadow: 0 0 0 0 var(--accent-color-1-dark) inset, 0 0 45px 5px var(--accent-color-1-light);
@@ -764,7 +773,7 @@ a.fighting-systems.prepared:hover .count-not-prepared {
     transform: translate(-50%, -50%);
 }
 
-.teams-container:hover .number {
+.teams:hover:not(.disabled) .number {
     font-weight: bold;
     color: var(--theme-color-1);
 }
