Feature: Added estimated required time to categories and did a little bugfixing here and there

--- a/sv-tora/public/css/sites/tournament-dashboard.css
+++ b/sv-tora/public/css/sites/tournament-dashboard.css
@@ -430,6 +430,16 @@ main h1 {
     transform: translateY(-50%);
 }
 
+.schedule p:first-of-type {
+    font-style: unset;
+    padding-left: unset;
+}
+
+.schedule p:first-of-type span {
+    position: relative;
+    vertical-align: sub;
+}
+
 .data-privacy {
     border: 3px solid var(--accent-color-2-dark);
 }
