--- a/sv-tora/resources/css/components/table.css
+++ b/sv-tora/resources/css/components/table.css
@@ -34,7 +34,7 @@
 h2.table-heading {
     font-size: 2rem;
     text-shadow: 2px 2px 10px var(--text-shadow);
-    margin-bottom: 0;
+    margin: 0;
 }
 
 .table {
