Fix: Fixed a bunch of major and minor bugs

--- a/sv-tora/public/css/sites/documents.css
+++ b/sv-tora/public/css/sites/documents.css
@@ -21,6 +21,7 @@ main h1 {
     position: relative;
     text-align: center;
     margin-bottom: 2rem;
+    padding: 0 0.5rem;
 }
 
 .document:hover {
